--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "moment": "^2.19.1",
+    "serve-favicon": "^2.4.5",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
